--- a/base/_base.scss
+++ b/base/_base.scss
@@ -30,11 +30,10 @@ body {
  * Basic styles for links
  */
 a {
-  //color: $brand-color;
+  color: $blue;
   text-decoration: none;
 
   @include on-event {
-    //color: $text-color;
     text-decoration: underline;
   }
 }
