--- a/layout/_grid.scss
+++ b/layout/_grid.scss
@@ -6,11 +6,15 @@
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
-    @include rem(padding-left, $space-default);
-    @include rem(padding-right, $space-default);
+    @include rem(padding-left, $space-l);
+    @include rem(padding-right, $space-l);
     width: 100%;
     @include media-query-breakpoint('large-desktop') {
         max-width: $max-width;
+    }
+    @include media-query-breakpoint('desktop', $type: max) {
+        @include rem(padding-left, $space-default);
+        @include rem(padding-right, $space-default);
     }
 }
 
@@ -18,19 +22,29 @@
     box-sizing: border-box;
     margin-left: auto;
     margin-right: auto;
-    @include rem(padding-left, $space-default);
-    @include rem(padding-right, $space-default);
+    @include rem(padding-left, $space-l);
+    @include rem(padding-right, $space-l);
     width: 100%;
+    @include media-query-breakpoint('desktop', $type: max) {
+        @include rem(padding-left, $space-default);
+        @include rem(padding-right, $space-default);
+    }
 }
 
 .grid {
     @include display-flex;
     @include flex-wrap(wrap);
-    @include justify-content(center);
+    @include justify-content(flex-start);
     @include rem(margin, -$space-default / 2);
-    @include rem(max-width, $max-width);
-    @include media-query-breakpoint('desktop', $type: max) {
+    @include media-query-breakpoint('small-desktop', $type: max) {
         display: block;
+    }
+}
+
+.grid.grid-unstackable {
+    @include flex-wrap(nowrap);
+    @include media-query-breakpoint('desktop', $type: max) {
+        @include display-flex;
     }
 }
 
@@ -39,24 +53,25 @@
 }
 
 .grid .grid-item {
-    @include flex(1 0 auto);
+    @include flex(1 0);
     @include rem(padding, $space-default / 2);
     @include media-query-breakpoint('phone', $type: max) {
         width: 100%;
     }
 }
 
-.grid-item.grid-item-primary {
-    @include flex(2 1 48rem);
-}
-
-.grid-item.grid-item-secondary  {
-    @include flex(1 0 24rem);
+.grid .grid-item.grid-item-compact {
+    width: 0;
+    @include media-query-breakpoint('tablet', $type: max) {
+        width: 100%;
+    }
 }
 
 //Grid Content
 .grid-content {
-    @extend .grid;
+    @include display-flex;
+    @include flex-wrap(wrap);
+    @include justify-content(flex-start);
     @include rem(margin, -$space-s);
     @include media-query-breakpoint('desktop', $type: max) {
         @include display-flex;
@@ -66,20 +81,37 @@
     }
 }
 
+.grid-content.grid-unstackable {
+    @include flex-wrap(nowrap);
+    @include media-query-breakpoint('desktop', $type: max) {
+        @include display-flex;
+    }
+}
+
 .grid-content + .grid-content {
     @include rem(margin-top, $space-s);
 }
 
 .grid-content .grid-item {
+    @include flex(1 0);
     padding: $space-s;
-    @include media-query-breakpoint('phone', $type: max) {
+    @include media-query-breakpoint('tablet', $type: max) {
         width: 100%;
     }
 }
 
-//Grid No-Padding
-.grid-no-padding {
-    @extend .grid-content;
+.grid-content.grid-unstackable .grid-item {
+    @include media-query-breakpoint('tablet', $type: max) {
+        width: auto;
+        @include flex(1 0);
+    }
+}
+
+//Grid Fitted
+.grid-fitted {
+    @include display-flex;
+    @include flex-wrap(wrap);
+    @include justify-content(flex-start);
     @include flex-wrap(nowrap);
     margin: 0;
     @include media-query-breakpoint('tablet', $type: max) {
@@ -87,13 +119,75 @@
     }
 }
 
-.grid-no-padding + .grid-content.grid-no-padding {
+.grid-fitted + .grid-content {
     margin-top: 0;
 }
 
-.grid-no-padding .grid-item {
+.grid-fitted .grid-item {
+    @include flex(1 0);
     padding: 0;
     @include media-query-breakpoint('phone', $type: max) {
         width: auto;
+    }
+}
+
+.grid-fitted.grid-unstackable {
+    @include flex-wrap(nowrap);
+    @include media-query-breakpoint('desktop', $type: max) {
+        @include display-flex;
+    }
+}
+
+//Grid Item Sizes
+.grid-item.grid-item-primary {
+    @include flex(2 1 48rem);
+}
+
+.grid-item.grid-item-secondary  {
+    @include flex(1 0 24rem);
+}
+
+.grid-item.grid-item-full {
+    @include flex(0 0 100%);
+}
+
+.grid-item.grid-item-half {
+    @include flex(0 0 50%);
+}
+
+.grid-item.grid-item-third {
+    @include flex(0 0 33.33%);
+}
+
+.grid-item.grid-item-quarter {
+    @include flex(0 0 25%);
+}
+
+//Offsets
+.grid-item.grid-item-offset-half {
+    margin-left: 50%;
+}
+
+.grid-item.grid-item-offset-third {
+    margin-left: 33.33%;
+}
+
+.grid-item.grid-item-offset-quarter {
+    margin-left: 25%;
+}
+
+.grid-item.grid-item-offset-half,
+.grid-item.grid-item-offset-third,
+.grid-item.grid-item-offset-quarter {
+    @include media-query-breakpoint('tablet', $type: max) {
+        margin: 0;
+    }
+}
+
+//Breaks
+.grid-item-break-half {
+    margin-right: 50%;
+    @include media-query-breakpoint('tablet', $type: max) {
+        margin-right: 0;
     }
 }
