--- a/main.scss
+++ b/main.scss
@@ -50,7 +50,7 @@ Rebilly 2017
     'components/chip',
     'components/tab',
     'components/popover',
-    'components/notification',
+    'components/message',
     'components/image',
     'components/divider',
     'components/stat',
