Content management changes

--- a/components/_popover.scss
+++ b/components/_popover.scss
@@ -117,8 +117,10 @@
     @include rem(padding, $inset-m);
 }
 
-.popover-content > *:not(.grid-content) {
-    margin: 0;
+.popover-content {
+    & p, & ul, & ol, & pre, & table, & blockquote, & h1, & h2, & h3, & h4, & h5, & h6 {
+        margin: 0;
+    }
 }
 
 .popover-content {
