--- a/components/_card.scss
+++ b/components/_card.scss
@@ -44,8 +44,10 @@
     padding: 0;
 }
 
-.card-content > *:not(.grid-content) {
-    margin: 0;
+.card-content {
+    & p, & ul, & ol, & pre, & table, & blockquote, & h1, & h2, & h3, & h4, & h5, & h6 {
+        margin: 0;
+    }
 }
 
 .card-content {
