--- a/components/_dropdown.scss
+++ b/components/_dropdown.scss
@@ -27,8 +27,10 @@
     border-bottom: 1px solid $faint-gray;
 }
 
-.dropdown-content > *:not(.grid-content) {
-    margin: 0;
+.dropdown-content {
+    & p, & ul, & ol, & pre, & table, & blockquote, & h1, & h2, & h3, & h4, & h5, & h6 {
+        margin: 0;
+    }
 }
 
 .dropdown-content:first-child {
